Shuffle around
embedder now depends on CLI