@@ -20,6 +20,7 @@ package org.apache.maven.cling.logging;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.Properties;
@@ -56,9 +57,15 @@ public class Slf4jConfigurationFactory {
                     }
                     String impl = properties.getProperty(slf4jBinding);
                     if (impl != null) {
-                        return (Slf4jConfiguration) Class.forName(impl).newInstance();
+                        return (Slf4jConfiguration)
+                                Class.forName(impl).getDeclaredConstructor().newInstance();
                     }
-                } catch (IOException | ClassNotFoundException | IllegalAccessException | InstantiationException ex) {
+                } catch (IOException
+                        | ClassNotFoundException
+                        | NoSuchMethodException
+                        | InvocationTargetException
+                        | IllegalAccessException
+                        | InstantiationException ex) {
                     // ignore and move on to the next
                 }
             }
